cc-manifests-central/utility/grafana/gw-grafana.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - grafana.anbutech.xyz
    port:
      name: http
      number: 80
      protocol: HTTP
