cc-manifests-central/utility/grafana/vs-grafana.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: istio-system
spec:
  gateways:
  - grafana-gateway
  hosts:
  - grafana.anbutech.xyz
  http:
  - route:
    - destination:
        host: anbu-grafana.anbu.svc.cluster.local
        port:
          number: 80
